--- a/yljapp/src/main/res/layout/content_staff_modify.xml
+++ b/yljapp/src/main/res/layout/content_staff_modify.xml
@@ -23,7 +23,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="staff name"/>
+                android:text="@string/staff_name"/>
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="match_parent"
@@ -36,7 +36,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="company"/>
+                android:text="@string/staff_company"/>
             <TextView
                 android:id="@+id/tv_company"
                 android:layout_width="match_parent"
@@ -49,7 +49,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="group"/>
+                android:text="@string/staff_group"/>
             <TextView
                 android:id="@+id/tv_group"
                 android:layout_width="match_parent"
@@ -71,7 +71,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="staff name"/>
+                android:text="@string/staff_name"/>
             <EditText
                 android:id="@+id/et_name"
                 android:layout_width="match_parent"
@@ -85,7 +85,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="company"/>
+                android:text="@string/staff_company"/>
             <EditText
                 android:id="@+id/et_company"
                 android:layout_width="match_parent"
@@ -99,7 +99,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="group"/>
+                android:text="@string/staff_group"/>
             <EditText
                 android:id="@+id/et_group"
                 android:layout_width="match_parent"
