--- a/yljapp/src/main/res/layout/fragment_not_finish_task.xml
+++ b/yljapp/src/main/res/layout/fragment_not_finish_task.xml
@@ -18,7 +18,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="task list"/>
+                    android:text="@string/task_task_list"/>
                 <Button
                     android:id="@+id/btn_add_task"
                     android:layout_alignParentRight="true"
