--- a/yljapp/src/main/res/drawable/background_vertical.xml
+++ b/yljapp/src/main/res/drawable/background_vertical.xml
@@ -1,9 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
-
-    android:endColor="#4c57d8"
+        android:endColor="@color/backgound_color"
         android:startColor="@color/white"
         android:type="linear"
-        android:angle="135"/>
-</shape><!--android:endColor="#1e9dd0"-->
+        android:angle="90"/>
+</shape>
