--- a/yljapp/src/main/res/drawable/toolbar.xml
+++ b/yljapp/src/main/res/drawable/toolbar.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <gradient
 
-    android:endColor="#4c57d8"
+        android:endColor="#4c57d8"
         android:startColor="@color/white"
         android:type="linear"
-        android:angle="135"/>
-</shape><!--android:endColor="#1e9dd0"-->
+        android:angle="180"/>
+</shape>
