--- a/yljapp/src/main/res/layout/fragment_common_login.xml
+++ b/yljapp/src/main/res/layout/fragment_common_login.xml
@@ -1,12 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.ylj.main.fragment.CommonLoginFragment">
+    android:layout_height="match_parent"
+    android:background="@drawable/background_vertical"
+    tools:context="com.ylj.main.fragment.CommonLoginFragment">
 
     <RelativeLayout
-        android:paddingTop="0dp"
-        android:layout_gravity="center"
-        android:layout_width="420dp"
-        android:layout_height="400dp">
+        style="@style/LoginLayout">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -16,33 +15,37 @@
                 android:id="@+id/lv_user"
                 android:choiceMode="singleChoice"
                 android:layout_width="match_parent"
-                android:layout_height="250dp">
+                android:layout_height="200dp">
 
             </ListView>
 
             <Button
-                android:id="@+id/bt_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:enabled="false"
+                android:id="@+id/bt_login"
+                style="@style/BlueButton"
                 android:text="@string/login_login"/>
 
             <Button
                 android:id="@+id/bt_annoy_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                style="@style/BlueButton"
                 android:text="@string/login_anonymous"/>
 
+            <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_alignParentRight="true"
+                    android:id="@+id/tv_switch_admin_login"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/login_admin_login"
+                    android:textColor="@color/backgound_color"
+                    android:textSize="20sp"/>
+            </RelativeLayout>
 
         </LinearLayout>
-        <TextView
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:id="@+id/tv_switch_admin_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_admin_login"
-            android:textSize="24sp"/>
+
     </RelativeLayout>
 
 </FrameLayout>
