--- a/yljapp/src/main/res/values/dimens.xml
+++ b/yljapp/src/main/res/values/dimens.xml
@@ -8,4 +8,17 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+
+    <dimen name="btn_radius">5dp</dimen>
+
+    <dimen name="layout_radius">20dp</dimen>
+    <dimen name="layout_width">400dp</dimen>
+    <dimen name="layout_height">500dp</dimen>
+    <dimen name="layout_padding_top">30dp</dimen>
+    <dimen name="layout_padding_bottom">30dp</dimen>
+    <dimen name="layout_padding_right">20dp</dimen>
+    <dimen name="layout_padding_left">20dp</dimen>
+
+    <dimen name="common_text_size">20sp</dimen>
+
 </resources>
